--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=RentaCar
 server.port=8086
 
-rentacar.front-end-url=http://localhost:4200/
-rentacar.back-end-url=http://localhost:8086/
+rentacar.front-end-url=http://frontend:80/
+rentacar.back-end-url=http://backend:8086/
 
 spring.jackson.date-format=com.fasterxml.jackson.databind.util.StdDateFormat
 
